--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
    "link_wa":"https://wa.me/62800000000/",
-   "master_url":"https://idnasia88.net",
+   "master_url":"https://heylink.me/IDNASIA88",
    "rtp_url":"https://rtpidnasia88.com/"
 }
