--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-   "link_wa":"https://wa.me/62800000000/",
-   "master_url":"https://idnasia88.store/",
-   "rtp_url":"https://rtpidnasia88.com/"
+   "link_wa":"https://chat.whatsapp.com/BVZTxsIxQlCCWLEMFcS2bC",
+   "master_url":"https://idnasia88sport.com",
+   "rtp_url":"https://idnasia88sport.com"
 }
