--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
    "link_wa":"https://chat.whatsapp.com/BVZTxsIxQlCCWLEMFcS2bC",
-   "master_url":"https://idnasia88sport.com",
-   "rtp_url":"https://idnasia88sport.com"
+   "master_url":"https://idnasia88gg.pro/",
+   "rtp_url":"https://idnasia88gg.pro/"
 }
