--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
    "link_wa":"https://chat.whatsapp.com/BVZTxsIxQlCCWLEMFcS2bC",
-   "master_url":"https://idnasia88gg.pro/",
-   "rtp_url":"https://idnasia88gg.pro/"
+   "master_url":"https://linktr.ee/INDASIA88",
+   "rtp_url":"https://linktr.ee/INDASIA88"
 }
