--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-   "link_wa":"https://chat.whatsapp.com/BVZTxsIxQlCCWLEMFcS2bC",
-   "master_url":"https://desty.page/idnasia88resmi",
-   "rtp_url":"https://desty.page/idnasia88resmi"
+   "link_wa":"https://direct.lc.chat/18717738/",
+   "master_url":"https://bit.ly/m/IDNASIA88",
+   "rtp_url":"https://direct.lc.chat/18717738/"
 }
