--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
    "link_wa":"https://direct.lc.chat/18717738/",
-   "master_url":"https://bit.ly/m/IDNASIA88",
+   "master_url":"https://t.ly/SITUS88GACOR",
    "rtp_url":"https://direct.lc.chat/18717738/"
 }
