--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
    "link_wa":"https://direct.lc.chat/18717738/",
-   "master_url":"https://t.ly/SITUS88GACOR",
+   "master_url":"https://heylink.me/idnasia88asia",
    "rtp_url":"https://direct.lc.chat/18717738/"
 }
